# lab_3_llp

./: .gitignore  CMakeLists.txt  README.md  database  lab_3_llp.docx
client/: CMakeLists.txt  answer  answer_2
client/src/: main.c
client/src/binary/: entity.pb-c.h  filter.pb-c.h  graphql_lexer.c  graphql_parser.c  graphql_parser.h  iterator.pb-c.h  noderesponce.pb-c.h  operation.pb-c.c  operation.pb-c.h  property.pb-c.c  propertyresponce.pb-c.c  relationship.pb-c.h  relationshipnoderesponce.pb-c.c  relationshipnoderesponce.pb-c.h  request.pb-c.c  simplenode.pb-c.c
client/src/handler/: client_handler.c  client_handler.h  print_handler.c  print_handler.h  socket_handler.c  socket_handler.h
client/src/net/: socket.c  socket.h
client/src/parser/: ast.c  ast.h  graphql.l  graphql.y  parser_ast.c  parser_ast.h
client/src/proto/: filter.proto  node.proto  operation.proto  relationship.proto
client/src/utils/: io_utils.c  io_utils.h  string_utils.c  string_utils.h
client/test_input/: all  continue  create_entity  create_nodes  create_rel  reple_to  select_test  simple  simple_2  update
client/test_output/: select_tweets.json  select_users.json  simple_create_select_responce.json  update_delete_responce.json
client_2/client/: CMakeLists.txt  save_1  simple
client_2/client/src/: deser.c  main.c
client_2/client/src/net/: socket.c  socket.h
client_2/client/src/parser/: ast.c  graphql.l  graphql.y  parser_ast.c  parser_ast.h
client_2/client/src/proto/: element.proto  entity.proto  filter.proto  operation.proto
client_2/client/src/utils/: io_utils.c
common/: CMakeLists.txt
common/net/: socket.c  socket.h
common/proto/: element.proto  entity.proto  propertyresponce.proto  relationshipnoderesponce.proto  request.proto  simplenode.proto  typeelement.proto
server/: CMakeLists.txt  database  test_delete_update  test_neo4j
server/binary/: entity.pb-c.c  filter.pb-c.c  iterator.pb-c.c  node.pb-c.c  node.pb-c.h  noderesponce.pb-c.c  property.pb-c.h  propertyresponce.pb-c.h  relationship.pb-c.c  request.pb-c.h  responce.pb-c.c  responce.pb-c.h  simplenode.pb-c.h  typeelement.pb-c.c  typeelement.pb-c.h  valuetype.pb-c.c  valuetype.pb-c.h
server/include/data/: constants.h  cursor.h  element.h  entity.h  enums.h  file.h  function_helper.h  iterator.h  node.h  page.h  property.h  relationship.h  request.h  stack.h
server/include/managers/: file_manager.h  page_manager.h
server/include/net/: socket.h
server/include/operations/: common.h  comparator.h  crud_methods.h  specific.h
server/include/server/: convertor.h  element_handler.h  entity_handler.h  find_element_handler.h  handlers.h  server_utils.h  validator.h
server/include/utils/: checker.h  io_utils.h  logger.h  page_utils.h  stack_utils.h  string_utils.h  test_utils.h
server/neo4j/: director.json  gerne.json  relationship  scheme  users.json
server/neo4j/my_neo/: actors  scheme.json
server/src/: main.c
server/src/data/: constants.c  entity.c  iterator.c  node.c  page.c  property.c  relationship.c  stack.c
server/src/managers/: file_manager.c  page_manager.c
server/src/net/: socket.c
server/src/operations/: common.c  comparator.c  crud_methods.c  specific.c
server/src/proto/: iterator.proto  noderesponce.proto  property.proto  relationshipnoderesponce.proto  responce.proto  valuetype.proto
server/src/server/: convertor.c  element_handler.c  entity_handler.c  find_element_helper.c  handlers.c  server_utils.c  validator.c
server/src/utils/: checker.c  io_utils.c  logger.c  page_utils.c  stack_utils.c  string_utils.c  test_data.c
